[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Common/Resources/TanksTheme.tres" type="Theme" id=2]

[node name="Menus" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Connect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Player Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="LevelSelect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.5
margin_top = -133.5
margin_right = 200.5
margin_bottom = 133.5

[node name="Label" type="Label" parent="LevelSelect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_top = 7.0
margin_right = 40.5
margin_bottom = 21.0
text = "Level Select:"

[node name="ListContainer" type="MarginContainer" parent="LevelSelect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -108.5
margin_bottom = 106.5
custom_constants/margin_right = 8
custom_constants/margin_top = 0
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="LevelList" type="ItemList" parent="LevelSelect/ListContainer"]
margin_left = 8.0
margin_right = 393.0
margin_bottom = 207.0

[node name="Select" type="Button" parent="LevelSelect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -59.0
margin_top = -28.0
margin_right = -8.0
margin_bottom = -8.0
text = "Select"

[node name="Back" type="Button" parent="LevelSelect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -28.0
margin_right = 50.0
margin_bottom = -8.0
text = "Back"
flat = true

[node name="MainMenu" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="SinglePlayer" type="Button" parent="MainMenu/HBoxContainer"]
margin_right = 391.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
disabled = true
text = "Single Player"

[node name="MultiPlayer" type="Button" parent="MainMenu/HBoxContainer"]
margin_left = 395.0
margin_right = 786.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Multiplayer"

[node name="Container" type="VSeparator" parent="MainMenu/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 790.0
margin_right = 1181.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Options" type="Button" parent="MainMenu/HBoxContainer"]
margin_left = 1185.0
margin_right = 1380.0
margin_bottom = 80.0
size_flags_horizontal = 3
disabled = true
text = "Options"

[node name="Exit" type="Button" parent="MainMenu/HBoxContainer"]
margin_left = 1384.0
margin_right = 1580.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Exit to Desktop"

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Navbar" type="Panel" parent="Lobby"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/Navbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Leave" type="Button" parent="Lobby/Navbar/HBoxContainer"]
margin_right = 314.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Leave"

[node name="Container" type="VSeparator" parent="Lobby/Navbar/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 318.0
margin_right = 947.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Start" type="Button" parent="Lobby/Navbar/HBoxContainer"]
margin_left = 951.0
margin_right = 1580.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
disabled = true
text = "Start Game"

[node name="Players" type="Panel" parent="Lobby"]
anchor_left = 0.988125
anchor_top = 0.742222
anchor_right = 0.988125
anchor_bottom = 0.900222
margin_left = -300.0
margin_bottom = -25.2001
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Lobby/Players"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 34.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Players"
align = 1

[node name="List" type="VBoxContainer" parent="Lobby/Players"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = 102.0

[node name="P1" type="HBoxContainer" parent="Lobby/Players/List"]
margin_right = 280.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Lobby/Players/List/P1"]
margin_top = 5.0
margin_right = 210.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Player 1"

[node name="Ready" type="CheckBox" parent="Lobby/Players/List/P1"]
margin_left = 214.0
margin_right = 280.0
margin_bottom = 24.0
disabled = true
text = "Ready"

[node name="P2" type="HBoxContainer" parent="Lobby/Players/List"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Lobby/Players/List/P2"]
margin_top = 5.0
margin_right = 210.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Waiting for player..."

[node name="Ready" type="CheckBox" parent="Lobby/Players/List/P2"]
margin_left = 214.0
margin_right = 280.0
margin_bottom = 24.0
disabled = true
text = "Ready"

[node name="Multiplayer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Navbar" type="Panel" parent="Multiplayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer/Navbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Back" type="Button" parent="Multiplayer/Navbar/HBoxContainer"]
margin_right = 224.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Back"

[node name="Container" type="VSeparator" parent="Multiplayer/Navbar/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 228.0
margin_right = 676.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Host" type="Button" parent="Multiplayer/Navbar/HBoxContainer"]
margin_left = 680.0
margin_right = 1128.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Host Game"

[node name="Join" type="Button" parent="Multiplayer/Navbar/HBoxContainer"]
margin_left = 1132.0
margin_right = 1580.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Join Game"

[node name="HostMenu" type="Panel" parent="Multiplayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Multiplayer/HostMenu"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Player Name:"

[node name="Name" type="LineEdit" parent="Multiplayer/HostMenu"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortLabel" type="Label" parent="Multiplayer/HostMenu"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Port:"

[node name="Port" type="LineEdit" parent="Multiplayer/HostMenu"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer/HostMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Cancel" type="Button" parent="Multiplayer/HostMenu/HBoxContainer"]
margin_top = 10.0
margin_right = 54.0
margin_bottom = 30.0
size_flags_vertical = 8
text = "Cancel"

[node name="Host" type="Button" parent="Multiplayer/HostMenu/HBoxContainer"]
margin_left = 58.0
margin_right = 257.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="ErrorLabel" type="Label" parent="Multiplayer/HostMenu"]
margin_left = 18.0
margin_top = 117.0
margin_right = 260.0
margin_bottom = 131.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="FindPublicIP" type="LinkButton" parent="Multiplayer/HostMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -186.5
margin_top = 65.5
margin_right = -13.5
margin_bottom = 79.5
text = "Find your public IP address"

[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="LevelSelect/Select" to="." method="_on_LS_Select_pressed"]
[connection signal="pressed" from="LevelSelect/Back" to="." method="_on_LS_Back_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/MultiPlayer" to="." method="_on_MultiPlayer_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Lobby/Navbar/HBoxContainer/Leave" to="." method="_on_Lobby_Leave_pressed"]
[connection signal="toggled" from="Lobby/Players/List/P1/Ready" to="." method="_on_Ready_toggled"]
[connection signal="pressed" from="Multiplayer/Navbar/HBoxContainer/Back" to="." method="_on_Multiplayer_Back_pressed"]
[connection signal="pressed" from="Multiplayer/Navbar/HBoxContainer/Host" to="." method="_on_Multiplayer_Host_pressed"]
[connection signal="pressed" from="Multiplayer/Navbar/HBoxContainer/Join" to="." method="_on_MultiPlayer_pressed"]
[connection signal="pressed" from="Multiplayer/HostMenu/HBoxContainer/Cancel" to="." method="_on_Host_Cancel_pressed"]
[connection signal="pressed" from="Multiplayer/HostMenu/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/HostMenu/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
